Se desarrolla la clase con normalidad y se inicia con el reto del taller

--- a/descuentos.html
+++ b/descuentos.html
@@ -17,9 +17,9 @@
     </p>
 
     </header>
-    <section>
+    <section class="container">
        <h2>Calcula el precio a pagar de tus productos con descuento</h2> 
-       <form action="">
+       <form action="" class="form">
 
            <label for="InputPrice">Escribe el precio de tu producto </label>
            <input id="InputPrice" type="number">
